--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <label for="cardName">NAME ON CARD</label>
+                        <label class="pin_label" for="cardName">NAME ON CARD</label>
                         <input type="text" class="form-control cc-form" name="cardName" id="cc-name" placeholder="Full name"/>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <label for="cardNumber">CARD NUMBER</label>
+                        <label class="pin_label" for="cardNumber">CARD NUMBER</label>
                         <div class="input-group">
                             <input
                                     type="tel"
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-xs-7 col-md-7">
                     <div class="form-group">
-                        <label for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span
+                        <label class="pin_label" for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span
                                 class="visible-xs-inline">EXP</span> DATE</label>
                         <input
                                 type="tel"
@@ -58,7 +58,7 @@
 
                 <div class="col-xs-5 col-md-5 pull-right">
                     <div class="form-group">
-                        <label for="cardCVC">CV CODE</label>
+                        <label class="pin_label" for="cardCVC">CV CODE</label>
                         <input
                                 type="password"
                                 class="form-control cc-form"
