--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -1,128 +1,199 @@
+
 body {
     margin: 20px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .container {
-            width: 1400px;
-        }
+    max-width: 900px;
+    width: auto;
+    text-align: center;
+    /*-webkit-box-sizing: content-box;*/
+    /*-moz-box-sizing: content-box;*/
+    /*box-sizing: content-box;*/
+}
+
+.container:before {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
 
 .img-charity {
-  height: 190px;
-  width: 190px;
+    // max-height: 130px;
+    // width: auto;
+    horiz-align: center;
+    align: middle;
+    vertical-align: middle;
+    display: table-cell;
 
 }
 
 .btn-recurring {
-  padding: 15px 80px;
-  font-size: 24px;
+    padding: 15px 80px;
+    font-size: 24px;
 }
 
 .btn-amt {
-  padding: 10px 30px;
+    padding: 10px 30px;
 }
 
 .col-buffer {
-  margin-bottom: 25px
+    margin-bottom: 25px
 }
 
 .top-buffer {
-  margin-top:20px;
-  margin-bottom:20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
 .btn-pmt-method {
+
     width: 150px;
     height: 34px;
     font-size: 15px;
     justify-content: center;
 }
 
-
 .hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    height: 165px;
+    width: 250px;
+    border: 1px solid #A3A3A4;
+    border-radius: 2px;
+
 }
 
 .hovereffect .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
 .hovereffect:hover .overlay {
-  background-color: rgba(170,170,170,0.4);
+    background-color: rgba(170, 170, 170, 0.4);
 }
 
 .hovereffect h2, .hovereffect img {
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
 .hovereffect img {
-  display: block;
-  position: relative;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+    display: block;
+    position: relative;
+    margin: auto;
+    max-height: 115px;
+    max-width: 200px;
 }
 
 .hovereffect:hover img {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
 }
 
 .hovereffect h2 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    position: absolute;
+    font-weight: normal;
+    font-size: 15px;
+    padding: 10px;
+    background-color: #E6EAEB;
+    color: #333;
+    margin-top: 0;
+    margin-bottom: 0;
+    bottom: 0;
+    width: 94%;
+
 }
 
 .hovereffect a.info {
-  display: inline-block;
-  text-decoration: none;
-  padding: 7px 14px;
-  text-transform: uppercase;
-  color: #fff;
-  border: 1px solid #fff;
-  margin: 50px 0 0 0;
-  background-color: transparent;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  font-weight: normal;
-  height: 85%;
-  width: 85%;
-  position: absolute;
-  top: -20%;
-  left: 8%;
-  padding: 50px;
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    background-color: transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    font-weight: normal;
+    width: 90%;
+    height: 150px;
+    position: absolute;
+    left: 0%;
+    padding: 30px 15px;
 }
 
 .hovereffect:hover a.info {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  background-color: rgba(0,0,0,0.4);
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    background-color: #4c8fb1;
+}
+
+/*.img-charity.givedirectly {*/
+    /*padding: 50px 0;*/
+/*}*/
+
+/*.img-charity.SCI,*/
+/*.img-charity.dewormworld {*/
+    /*padding: 10px 0;*/
+/*}*/
+
+/*.img-charity.givedirectlyGB,*/
+/*.img-charity.EAA {*/
+    /*padding: 25px 0;*/
+/*}*/
+
+.charity_container {
+    margin: auto;
+    text-align: center;
+}
+
+.charity_title,
+.charityClick {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+.block
+{
+    display: -moz-inline-stack;
+    display: inline-block;
+    vertical-align: middle;
+    zoom: 1;
+    *display: inline;
+
+    margin: 1%;
+
+}
+
+.pin_label {
+    alignment: left;
+    text-align: left;
+}
+
+.img_frame {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
 }
