--- a/static/css/process_steps.css
+++ b/static/css/process_steps.css
@@ -6,18 +6,29 @@ body {
 }
 .stepwizard-row {
     display: table-row;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
+
+.container {
+    text-align: center;
+}
+
 .stepwizard {
-    display: table;
-    width: 50%;
+    display: inline-table;
+    width: 80%;
     position: relative;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
 .stepwizard-step button[disabled] {
     opacity: 1 !important;
     filter: alpha(opacity=100) !important;
 }
 .stepwizard-row:before {
-    top: 14px;
+    top: 9px;
     bottom: 0;
     position: absolute;
     content: " ";
@@ -25,19 +36,25 @@ body {
     height: 1px;
     background-color: #ccc;
     z-order: 0;
+    -webkit-box-sizing: unset;
+    -moz-box-sizing: unset;
+    box-sizing: unset;
 }
 .stepwizard-step {
     display: table-cell;
     text-align: center;
     position: relative;
-    width: 33.3%;
+    width: 33%;
 }
 .btn-circle {
     width: 30px;
     height: 30px;
     text-align: center;
-    padding: 6px 0;
+    padding: 5px 5px;
     font-size: 12px;
     line-height: 1.428571429;
-    border-radius: 15px;
+    background-color: #B0B0B2;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50%;
 }
