--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -46,24 +46,23 @@
     <div class="stepwizard">
         <div class="stepwizard-row setup-panel">
             <div class="stepwizard-step">
-                <a href="#step-1" type="button" class="btn btn-primary btn-circle" disabled=[[step != 1]]>1</a>
+                <a href="#step-1" type="button" class="btn btn-circle [[step === 1 ? "btn-primary" : "btn-default" ]]" on-click='@this.set_step(1)'>1</a>
                 <p>Charities</p>
             </div>
             <div class="stepwizard-step">
-                <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled=[[step != 2]]>2</a>
+                <a href="#step-2" type="button" class="btn btn-circle [[step === 2 ? "btn-primary" : "btn-default" ]]" disabled=[[step < 2]] on-click='@this.set_step(2)'>2</a>
                 <p>Payment</p>
             </div>
             <div class="stepwizard-step">
-                <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled=[[step != 3]]>3</a>
+                <a href="#step-3" type="button" class="btn btn-circle [[step === 3 ? "btn-primary" : "btn-default" ]]" disabled=[[step < 3]] on-click='@this.set_step(3)'>3</a>
                 <p>Confirmation</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container">
-    [[#if step == 1]]
-    <div class="row setup-content" id="step-1">
+<div class="container" >
+    <div class="row setup-content [[step !== 1 ? "collapse" : ""]]" id="step-1">
         <div class="charity_container">
             [[#charities:i]]
                 <div class="block" style="vertical-align: text-bottom">
@@ -83,14 +82,12 @@
             [[/charities]]
         </div>
     </div>
-    [[/if]]
 
-    [[#if step == 2]]
-    <div class="row setup-content" id="step-2">
+    <div class="row setup-content [[step !== 2 ? "collapse" : ""]]" id="step-2">
+
         <form method='post' action='' class='pin' id='id_pledge_form'>
             {% csrf_token %}
             <h3 align="center">How would you like to donate?</h3>
-
             <br>
             <div class="text-center">
                 <div data-toggle="buttons">
@@ -204,9 +201,7 @@
         </div>
 
     </div>
-    [[/if]]
 
-    [[#if step == 3]]
     <div class="row setup-content" id="step-3">
         <div class="col-xs-6 col-md-offset-3">
             <div class="col-md-12">
@@ -214,7 +209,6 @@
             </div>
         </div>
     </div>
-    [[/if]]
 </div>
 </script>
 
@@ -226,8 +220,57 @@
               charities: charities
             },
       delimiters: [ '[[', ']]' ],
+
+        set_step: function (i) {
+            ractive.set({
+                    step: i
+                });
+            if (i == 2){validate_cc()}
+            },
+
+        charity_click: function (id, charity_name) {
+            ractive.set({
+                    step: 2,
+                    charity_id: id,
+                    charity_name: charity_name
+                });
+            document.getElementById('id_recipient_org').value = id;
+            document.getElementById('id_item_name').value = 'Donation to '.concat(charity_name);
+            validate_cc();
+            },
+
+
+        set_recurring: function (is_recurring) {
+            ractive.set({
+                    recurring: is_recurring
+                });
+            document.getElementById('id_recurring').checked = is_recurring;
+            },
+
+        set_amount: function (amount) {
+            ractive.set({
+                    amount: amount
+                });
+
+            if (amount == 'other'){
+                $("#id_formgroup_amount").removeClass('collapse');
+                $('input[name=amount]').each(function (){this.value=""});
+            } else {
+                $("#id_formgroup_amount").addClass('collapse');
+                $('input[name=amount]').each(function (){this.value=amount});
+            }
+            },
+
+        set_pmt_method: function (pmt_method) {
+            ractive.set({
+                    pmt_method: pmt_method
+                });
+            document.getElementById('id_payment_method').value = pmt_method;
+            },
+
     });
-    ractive.on('step2', function() {alert('clicked'); })
+
+
     </script>
 </body>
 </html>
